--- a/css/styles.css
+++ b/css/styles.css
@@ -154,11 +154,12 @@ body {
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 30px;
-
 	align-items: center;
 	text-align: center;
 	letter-spacing: 0.06em;
 	color: #ffffff;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 15px;
 }
 .orange-like-tomato {
 	background-color: rgb(247, 95, 0);
