--- a/css/styles.css
+++ b/css/styles.css
@@ -160,6 +160,7 @@ body {
 	color: #ffffff;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 	border-radius: 15px;
+	cursor: pointer;
 }
 .orange-like-tomato {
 	background-color: rgb(247, 95, 0);
@@ -175,4 +176,13 @@ body {
 }
 .orange-like-disko {
 	background-color: rgb(255, 106, 0);
+}
+
+.orange-like-tomato:hover,
+.orange-like-rainbow:hover,
+.orange-like-lemon:hover,
+.orange-like-dog:hover,
+.orange-like-disko:hover {
+	color: rgb(70, 38, 38);
+	box-shadow: 0px 4px 4px rgba(70, 38, 38, 0.75);
 }
