--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,16 @@ body {
 	color: #2196f3;
 }
 
+.address-map a,
+.address-mail a,
+.address-tel a {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	color: #ffffff;
+}
+
 /*-----------------MAIN STUDIO-----------------*/
 /*-----------------HERO-----------------*/
 .studio-hero {
@@ -114,7 +124,7 @@ body {
 	color: #757575;
 }
 
-/*-----------------ACT-----------------*/
+/*-----------------ACT + TEAM-----------------*/
 .act-banner,
 .team-banner {
 	font-weight: 700;
@@ -142,4 +152,10 @@ body {
 .team-job {
 	font-weight: 400;
 	color: #757575;
+}
+
+.team-item {
+	background: #ffffff;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 0px 0px 4px 4px;
 }
